logs/validate.20260324-202021.log
error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:551:50
    |
551 |                 vstd::laws_cmp::obeys_cmp_spec::<Pair<K, V>>(),
    |                                                  ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required for `Types::Types::Pair<K, V>` to implement `std::cmp::Ord`
   --> src/Types.rs:102:54
    |
102 |     #[derive(Debug, Copy, PartialEq, Eq, PartialOrd, Ord, Hash)]
    |                                                      ^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `vstd::laws_cmp::obeys_cmp_spec`
   --> vstd/laws_cmp.rs:47:0
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:552:39
    |
552 |                 view_ord_consistent::<Pair<K, V>>(),
    |                                       ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required for `Types::Types::Pair<K, V>` to implement `std::cmp::Ord`
   --> src/Types.rs:102:54
    |
102 |     #[derive(Debug, Copy, PartialEq, Eq, PartialOrd, Ord, Hash)]
    |                                                      ^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
   --> src/Chap38/BSTParaStEph.rs:149:51
    |
149 |     pub open spec fn view_ord_consistent<T: StT + Ord>() -> bool {
    |                                                   ^^^ required by this bound in `view_ord_consistent`
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:553:53
    |
553 |                 spec_pair_key_determines_order::<K, V>(),
    |                                                     ^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required by a bound in `Chap43::OrderedTableStEph::OrderedTableStEph::spec_pair_key_determines_order`
   --> src/Chap43/OrderedTableStEph.rs:86:76
    |
 86 |     pub open spec fn spec_pair_key_determines_order<K: StT + Ord, V: StT + Ord>() -> bool {
    |                                                                            ^^^ required by this bound in `spec_pair_key_determines_order`
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:618:50
    |
618 |                 vstd::laws_cmp::obeys_cmp_spec::<Pair<K, V>>(),
    |                                                  ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required for `Types::Types::Pair<K, V>` to implement `std::cmp::Ord`
   --> src/Types.rs:102:54
    |
102 |     #[derive(Debug, Copy, PartialEq, Eq, PartialOrd, Ord, Hash)]
    |                                                      ^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `vstd::laws_cmp::obeys_cmp_spec`
   --> vstd/laws_cmp.rs:47:0
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:619:39
    |
619 |                 view_ord_consistent::<Pair<K, V>>(),
    |                                       ^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required for `Types::Types::Pair<K, V>` to implement `std::cmp::Ord`
   --> src/Types.rs:102:54
    |
102 |     #[derive(Debug, Copy, PartialEq, Eq, PartialOrd, Ord, Hash)]
    |                                                      ^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
   --> src/Chap38/BSTParaStEph.rs:149:51
    |
149 |     pub open spec fn view_ord_consistent<T: StT + Ord>() -> bool {
    |                                                   ^^^ required by this bound in `view_ord_consistent`
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error[E0277]: the trait bound `V: std::cmp::Ord` is not satisfied
   --> src/Chap43/OrderedTableStEph.rs:620:53
    |
620 |                 spec_pair_key_determines_order::<K, V>(),
    |                                                     ^ the trait `std::cmp::Ord` is not implemented for `V`
    |
note: required by a bound in `Chap43::OrderedTableStEph::OrderedTableStEph::spec_pair_key_determines_order`
   --> src/Chap43/OrderedTableStEph.rs:86:76
    |
 86 |     pub open spec fn spec_pair_key_determines_order<K: StT + Ord, V: StT + Ord>() -> bool {
    |                                                                            ^^^ required by this bound in `spec_pair_key_determines_order`
help: consider further restricting type parameter `V` with trait `Ord`
    |
534 |     pub trait OrderedTableStEphTrait<K: StT + Ord, V: StT + std::cmp::Ord>: Sized + View<V = Map<K::V, V::V>> {
    |                                                           +++++++++++++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
Elapsed: 16s
